# microgpt-cpp

./: .gitignore  CMakeLists.txt  README.md  flamegraph.sh  microgpt.cpp  microgpt.py  model.hpp  util.h  value.hpp
src/: adam.cpp  adam.hpp  microgpt.cpp  model.cpp  model.hpp  util.cpp  util.h  value.cpp  value.hpp
